--- a/css/video-player.css
+++ b/css/video-player.css
@@ -1,84 +1,126 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  body {
-    min-height: 100vh;
-    background: #ddd;
-  }
-  
-  ::-webkit-scrollbar {
-    width: 5px;
-  }
-  
-  ::-webkit-scrollbar-thumb {
-    background: white;
-  }
-  
-  .sidebar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 250px;
-    height: 100%;
-    background: #b73232;
-    display: flex;
-    flex-direction: column;
-  }
-  
-  header h2 {
-    font: bold;
-    font-size: 35px;
-    color: beige;
-  }
-  
-  .scrollbaar-inner {
-    overflow-y: auto;
-    padding: 10px;
-  }
-  
-  .content {
-    position: relative;
-    left: 250px;
-    width: calc(100% - 250px);
-    height: 100vh;
-    background: #585858;
-    color: white;
-    font-weight: bold;
-    font-size: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  h3 {
-    font-size: 20px;
-  }
-  
-  
-  
-  /* ============================================================================================================= */
-  
-  /* Import Google font - Poppins */
-  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
-  *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
-  }
-  body{
+}
+
+body {
   min-height: 100vh;
-  background: #E3F2FD;
-  }
-  body, .container, .video-controls, .video-timer, .options{
+  background: #ddd;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: white;
+}
+
+.sidebar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 390px;
+  height: 100%;
+  background: #d5d5d5;
+  display: flex;
+  flex-direction: column;
+  border-right: 4px solid #c2c2c2;
+}
+
+header h2 {
+  font: bold;
+  font-size: 35px;
+  color: beige;
+}
+
+.scrollbaar-inner {
+  overflow-y: auto;
+  padding: 10px;
+}
+
+.content {
+  position: relative;
+  overflow: hidden; /* Change this line */
+  left: 270px;
+  width: calc(100% - 390px);
+  height: 100vh;
+  background: #ffffff;
+  color: white;
+  font-weight: bold;
+  font-size: 30px;
   display: flex;
   align-items: center;
   justify-content: center;
-  }
-  .container{
+}
+
+h3 {
+  font-size: 20px;
+}
+
+.courses-button {
+  /* font-weight: bold ; */
+  font-size: 1.1rem;
+  margin: 1rem 0;
+  padding: 1rem;
+  border: none;
+  width: 360px;
+  background: #ffffff;
+}
+
+.Certificate {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  /* margin: 10px; */
+  font-weight: bold;
+  font-size: 20px;
+  padding: 10px;
+  color: #4b9fff;
+  background: #ffffff;
+  padding-top: 20px;
+  cursor: pointer;
+}
+.back-to-home {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  /* margin: 10px; */
+  font-weight: bold;
+  font-size: 20px;
+  padding: 20px;
+  color: #0d498e;
+  background: #ffffff;
+  cursor: pointer;
+}
+
+/* ============================================================================================================= */
+
+/* Import Google font - Poppins */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+body {
+  min-height: 100vh;
+  background: #e3f2fd;
+}
+body,
+.container,
+.video-controls,
+.video-timer,
+.options {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.container {
   width: 98%;
   user-select: none;
   overflow: hidden;
@@ -88,14 +130,14 @@
   aspect-ratio: 16 / 9;
   position: relative;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
-  }
-  .container.fullscreen{
+}
+.container.fullscreen {
   max-width: 100%;
   width: 100%;
   height: 100vh;
   border-radius: 0px;
-  }
-  .wrapper{
+}
+.wrapper {
   position: absolute;
   left: 0;
   right: 0;
@@ -103,13 +145,13 @@
   opacity: 0;
   bottom: -15px;
   transition: all 0.08s ease;
-  }
-  .container.show-controls .wrapper{
+}
+.container.show-controls .wrapper {
   opacity: 1;
   bottom: 0;
   transition: all 0.13s ease;
-  }
-  .wrapper::before{
+}
+.wrapper::before {
   content: "";
   bottom: 0;
   width: 100%;
@@ -118,18 +160,18 @@
   height: calc(100% + 35px);
   pointer-events: none;
   background: linear-gradient(to top, rgba(0, 0, 0, 0.7), transparent);
-  }
-  .video-timeline{
+}
+.video-timeline {
   height: 7px;
   width: 100%;
   cursor: pointer;
-  }
-  .video-timeline .progress-area{
+}
+.video-timeline .progress-area {
   height: 3px;
   position: relative;
   background: rgba(255, 255, 255, 0.6);
-  }
-  .progress-area span{
+}
+.progress-area span {
   position: absolute;
   left: 50%;
   top: -25px;
@@ -137,14 +179,14 @@
   color: #fff;
   pointer-events: none;
   transform: translateX(-50%);
-  }
-  .progress-area .progress-bar{
+}
+.progress-area .progress-bar {
   width: 0%;
   height: 100%;
   position: relative;
   background: #2289ff;
-  }
-  .progress-bar::before{
+}
+.progress-bar::before {
   content: "";
   right: 0;
   top: 50%;
@@ -154,27 +196,28 @@
   border-radius: 50%;
   background: #2289ff;
   transform: translateY(-50%);
-  }
-  .progress-bar::before, .progress-area span{
+}
+.progress-bar::before,
+.progress-area span {
   display: none;
-  }
-  .video-timeline:hover .progress-bar::before,
-  .video-timeline:hover .progress-area span{
+}
+.video-timeline:hover .progress-bar::before,
+.video-timeline:hover .progress-area span {
   display: block;
-  }
-  .wrapper .video-controls{
+}
+.wrapper .video-controls {
   padding: 5px 20px 10px;
-  }
-  .video-controls .options{
+}
+.video-controls .options {
   width: 100%;
-  }
-  .video-controls .options:first-child{
+}
+.video-controls .options:first-child {
   justify-content: flex-start;
-  }
-  .video-controls .options:last-child{
+}
+.video-controls .options:last-child {
   justify-content: flex-end;
-  }
-  .options button{
+}
+.options button {
   height: 40px;
   width: 40px;
   font-size: 19px;
@@ -184,42 +227,42 @@
   color: #efefef;
   border-radius: 3px;
   transition: all 0.3s ease;
-  }
-  .options button :where(i, span) {
+}
+.options button :where(i, span) {
   height: 100%;
   width: 100%;
   line-height: 40px;
-  }
-  .options button:hover :where(i, span){
+}
+.options button:hover :where(i, span) {
   color: #fff;
-  }
-  .options button:active :where(i, span){
+}
+.options button:active :where(i, span) {
   transform: scale(0.9);
-  }
-  .options button span{
+}
+.options button span {
   font-size: 23px;
-  }
-  .options input{
+}
+.options input {
   height: 4px;
   margin-left: 3px;
   max-width: 75px;
-  accent-color: #0078FF;
-  }
-  .options .video-timer{
+  accent-color: #0078ff;
+}
+.options .video-timer {
   color: #efefef;
   margin-left: 15px;
   font-size: 14px;
-  }
-  .video-timer .separator{
+}
+.video-timer .separator {
   margin: 0 5px;
   font-size: 16px;
   font-family: "Open sans";
-  }
-  .playback-content{
+}
+.playback-content {
   display: flex;
   position: relative;
-  }
-  .playback-content .speed-options{
+}
+.playback-content .speed-options {
   position: absolute;
   list-style: none;
   left: -40px;
@@ -232,72 +275,112 @@
   background: rgba(255, 255, 255, 0.9);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
   transition: opacity 0.13s ease;
-  }
-  .playback-content .speed-options.show{
+}
+.playback-content .speed-options.show {
   opacity: 1;
   pointer-events: auto;
-  }
-  .speed-options li{
+}
+.speed-options li {
   cursor: pointer;
   color: #000;
   font-size: 14px;
   margin: 2px 0;
   padding: 5px 0 5px 15px;
   transition: all 0.1s ease;
-  }
-  .speed-options li:where(:first-child, :last-child){
+}
+.speed-options li:where(:first-child, :last-child) {
   margin: 0px;
-  }
-  .speed-options li:hover{
+}
+.speed-options li:hover {
   background: #dfdfdf;
-  }
-  .speed-options li.active{
+}
+.speed-options li.active {
   color: #fff;
   background: #3e97fd;
-  }
-  .container video{
+}
+.container video {
   width: 100%;
+}
+
+@media screen and (max-width: 540px) {
+  .wrapper .video-controls {
+    padding: 3px 10px 7px;
   }
-  
-  @media screen and (max-width: 540px) {
-  .wrapper .video-controls{
-  padding: 3px 10px 7px;
+  .options input,
+  .progress-area span {
+    display: none !important;
   }
-  .options input, .progress-area span{
-  display: none!important;
+  .options button {
+    height: 30px;
+    width: 30px;
+    font-size: 17px;
   }
-  .options button{
-  height: 30px;
-  width: 30px;
-  font-size: 17px;
+  .options .video-timer {
+    margin-left: 5px;
   }
-  .options .video-timer{
-  margin-left: 5px;
-  }
-  .video-timer .separator{
-  font-size: 14px;
-  margin: 0 2px;
+  .video-timer .separator {
+    font-size: 14px;
+    margin: 0 2px;
   }
   .options button :where(i, span) {
-  line-height: 30px;
+    line-height: 30px;
   }
-  .options button span{
-  font-size: 21px;
+  .options button span {
+    font-size: 21px;
   }
-  .options .video-timer, .progress-area span, .speed-options li{
-  font-size: 12px;
+  .options .video-timer,
+  .progress-area span,
+  .speed-options li {
+    font-size: 12px;
   }
-  .playback-content .speed-options{
-  width: 75px;
-  left: -30px;
-  bottom: 30px;
+  .playback-content .speed-options {
+    width: 75px;
+    left: -30px;
+    bottom: 30px;
   }
-  .speed-options li{
-  margin: 1px 0;
-  padding: 3px 0 3px 10px;
+  .speed-options li {
+    margin: 1px 0;
+    padding: 3px 0 3px 10px;
   }
-  .right .pic-in-pic{
-  display: none;
+  .right .pic-in-pic {
+    display: none;
   }
-  }
-  
+}
+
+.all-video-container{
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  gap: 50px;
+  margin-top: -40px;
+  margin-left: -150px;
+  position: relative;
+}
+
+.pre-next-video-button{
+  margin-right: -500px;
+  display: flex;
+  gap: 20px;
+}
+
+.prev-btn{
+   padding: 5px 10px;
+   font-weight: bold;
+   font-size: 20px;
+   background: #3572ff;
+   border-radius: 5px;
+   color: #ffffff;
+   border: none;
+   cursor: pointer;
+}
+
+.next-btn{
+  padding: 5px 10px;
+  font-weight: bold;
+  font-size: 20px;
+  background: #3572ff;
+  border-radius: 5px;
+  color: #ffffff;
+  border: none;
+  cursor: pointer;
+}
