--- a/css/index.css
+++ b/css/index.css
@@ -81,5 +81,9 @@
   .button-62:not([disabled]):hover {
     box-shadow: 0 0 .25rem rgba(0, 0, 0, 0.5), -.125rem -.125rem 1rem rgba(239, 71, 101, 0.5), .125rem .125rem 1rem rgba(255, 154, 90, 0.5);
   }
-
+  .line{
+    width: 140px;
+    height: 1px;
+    background-color: white;
+  }
   
