--- a/css/index.css
+++ b/css/index.css
@@ -83,10 +83,6 @@
   }
   .line{
     width: 140px;
-    height: 1px;
-    background-color: white;
-  }
-  .icon{
-    height: 60px;
-    margin-right: 5px;
+    height: 0.5px;
+    background-color: blue;
   }
