--- a/css/index.css
+++ b/css/index.css
@@ -83,8 +83,8 @@
   }
   .line{
     width: 140px;
-    height: 0.3px;
-    background-color: blue;
+    height: 1px;
+    background-color: orangered;
   }
 
   button {
@@ -174,5 +174,8 @@
    button:hover .button-text {
     color: #fff;
    }
+  .link{
+    color: orangered;
 
+}
    
