--- a/css/index.css
+++ b/css/index.css
@@ -89,9 +89,10 @@
 
 .line {
   width: 140px;
-  height: 0.3px;
-  background-color: blue;
+  height: 1px;
+  background-color: orangered;
 }
+  button{
     background: linear-gradient(to bottom right, #EF4765, #FF9A5A);
     border: 0;
     border-radius: 12px;
@@ -119,11 +120,6 @@
   
   .button-62:not([disabled]):hover {
     box-shadow: 0 0 .25rem rgba(0, 0, 0, 0.5), -.125rem -.125rem 1rem rgba(239, 71, 101, 0.5), .125rem .125rem 1rem rgba(255, 154, 90, 0.5);
-  }
-  .line{
-    width: 140px;
-    height: 1px;
-    background-color: orangered;
   }
 
 button {
